<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
    <string name="goals">Goals</string>

    <plurals name="step_count">
        <item quantity="one">%d step today</item>
        <item quantity="other">%d steps today</item>
    </plurals>
    <string name="step_counter_stats">%1$d kcal · %2$.2f km · %3$d%% of your daily goal</string>
    <string name="steps">steps</string>
    <string name="step_goal">Goal %s</string>
    <string name="step_counter_channel">Step counter</string>
    <string name="good_morning">Good Morning ☀️</string>
    <string name="when_in_doubt_lets_take_a_walk">When in doubt lets take a walk.</string>
    <string name="today_s_target">Today’s Target 🔥</string>
    <string name="target_steps">%s Steps</string>
    <string name="distance">Distance</string>
    <string name="statistic">Statistic</string>
    <string name="total_steps">Total Steps</string>
    <string name="distance_travelled_format">%.2f km</string>
    <plurals name="step_count_format">
        <item quantity="one">Step</item>
        <item quantity="other">Steps</item>
    </plurals>
    <string name="kcal">kcal</string>

</resources>