<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.home.presentation.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/graphLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbarCl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@id/targetCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed">

                <LinearLayout
                    android:id="@+id/headerTextsCl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/menuBtn"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/greetingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_morning"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/inter_18pt_semi_bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/when_in_doubt_lets_take_a_walk"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/inter_18pt_regular"/>


                </LinearLayout>

                <ImageButton
                    android:id="@+id/menuBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/headerTextsCl"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/targetCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:elevation="0dp"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@id/statsLL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarCl"
                app:strokeColor="@null"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp">


                    <TextView
                        android:id="@+id/targetHeading"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/today_s_target"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_18pt_regular"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintBottom_toTopOf="@id/todayTargetText"
                        app:layout_constraintEnd_toStartOf="@id/stepsIv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/todayTargetText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/target_steps"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/inter_18pt_semi_bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/targetHeading"
                        app:layout_constraintStart_toStartOf="@id/targetHeading"
                        app:layout_constraintTop_toBottomOf="@id/targetHeading" />

                    <ImageView
                        android:id="@+id/stepsIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_target_steps"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/targetHeading"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/statsLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/targetCard">

                <include
                    android:id="@+id/distanceLayout"
                    layout="@layout/stats_card_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <include
                    android:id="@+id/stepsLayout"
                    layout="@layout/stats_card_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_weight="1" />

                <include
                    android:id="@+id/caloryLayout"
                    layout="@layout/stats_card_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/graphLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/fitFlexIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:text="@string/statistic"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/inter_18pt_regular" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/statsLL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarCl"
            app:strokeColor="@null"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">


                <TextView
                    android:id="@+id/totalSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_steps"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/inter_18pt_bold" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/fitFlexIv"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/ic_fitflex_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphLL" />

</androidx.constraintlayout.widget.ConstraintLayout>